--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,3 @@
-<h1>Welcome to dealflow (Pages#home)</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Witaj w dealflow (Pages#home)</h1>
+<p>Zaloguj się <%= link_to "tutaj", "#" 	%>.</p>
+
