ready app framework

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
-<h1>Witaj w dealflow (Pages#home)</h1>
-<p>Zaloguj się <%= link_to "tutaj", "#" 	%>.</p>
-
+<div class="jumbotron">
+	<h1>Witaj w dealflow (Pages#home)</h1>
+	<p>Zaloguj się <%= link_to "tutaj", "#", class: "btn btn-primary btn-lg" %>.</p>
+</div>  
