devise installed with devise:views

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="jumbotron">
-	<h1>Witaj w dealflow (Pages#home)</h1>
-	<p>Zaloguj się <%= link_to "tutaj", "#", class: "btn btn-primary btn-lg" %>.</p>
+<div class="jumbotron center">
+	<h1>Witaj w DealFlow</h1>
+	<p><%= link_to "Zaloguj się", "#", class: "btn btn-primary btn-lg" %></p>
 </div>  
