--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">Dealflow</a>
+    <a class="navbar-brand" href="#">DealFlow</a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
