--- a/app/views/deals/_form.html.erb
+++ b/app/views/deals/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :client %><br>
-    <%= f.text_field :client %>
+    <%= f.label :client_name %><br>
+    <%= f.text_field :client_name %>
   </div>
   <div class="field">
     <%= f.label :headline %><br>
