--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -16,7 +16,7 @@
   <tbody>
     <% @deals.each do |deal| %>
       <tr>
-        <td><%= deal.client_name %></td>
+        <td><%= Client.find(deal.client_id.to_i).name %></td>
         <td><%= deal.headline %></td>
         <td><%= deal.value %></td>
         <td><%= deal.user.email if deal.user %></td>
