--- a/app/views/deals/_form1.html.erb
+++ b/app/views/deals/_form1.html.erb
@@ -1,4 +1,12 @@
 <%= form_for(@deal) do |f| %>
+  <div class="field">
+  <%= f.autocomplete_field :client_id, autocomplete_client_name_deals_path %>
+  </div>
+<% end %>
+
+***
+
+<%= form_for(@deal) do |f| %>
   <% if @deal.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@deal.errors.count, "error") %> prohibited this deal from being saved:</h2>
