--- a/app/views/entryitems/_form.html.erb
+++ b/app/views/entryitems/_form.html.erb
@@ -16,6 +16,7 @@
     <%= f.text_area :description %>
   </div>
   <%= f.hidden_field :client_id, :value => params[:client_id] %>
+  <%= f.hidden_field :deal_id, :value => params[:deal_id] %>
   <div class="actions">
     <%= f.submit %>
   </div>
