--- a/app/views/deals/show.html.erb
+++ b/app/views/deals/show.html.erb
@@ -30,7 +30,7 @@
     <tr>
       <th>Data</th>
       <th>Opis</th>
-      <th>Pokaz</th>
+      <th>Pokaż</th>
       <th>Edytuj</th>
       <th>Usuń</th>
       
