added menu and formatting

--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Tematy prowadzone z klientami</h1>
 
-<table class="table">
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Klient</th>
