--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -21,7 +21,7 @@
 </p>
 
 <p>
-<a href="<%=new_task_path(:client_id => @client)%>" class="btn btn-primary">Dodaj zadanie</a>
+<a href="<%=new_task_path(:client_id => @client)%>" class="btn btn-primary">Dodaj zadanie:</a>
 </p>
 
 <h4>Zadania dotyczące klienta</h4>
