--- a/app/views/valuations/_form.html.erb
+++ b/app/views/valuations/_form.html.erb
@@ -15,6 +15,13 @@
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </div>
+<div class="field">
+<%= f.fields_for :part do |builder| %>
+    <%= builder.label :part %><br>   
+    <%= builder.collection_select :part_id, Part.all, :id, :name %>
+<% end %>
+</div>
+  
   <div class="actions">
     <%= f.submit %>
   </div>
