--- a/app/views/valuations/show.html.erb
+++ b/app/views/valuations/show.html.erb
@@ -4,6 +4,7 @@
   <strong>Description:</strong>
   <%= @valuation.description %>
 </p>
+<%= params.inspect %>
 
 <%= link_to 'Edit', edit_valuation_path(@valuation) %> |
 <%= link_to 'Back', valuations_path %>
