--- a/app/views/valuations/_form.html.erb
+++ b/app/views/valuations/_form.html.erb
@@ -7,6 +7,7 @@
       <% @valuation.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
+      
       </ul>
     </div>
   <% end %>
@@ -17,9 +18,17 @@
   </div>
 <div class="field">
 
-     <%= collection_select :valuation, :part_ids, @parts, :id, :name  %>
-
 </div>
+<div class="field">
+
+<%= f.fields_for :valuation_lines do |builder| %>
+
+<%= builder.collection_select(:part_id, @parts, :id, :name) %><br/>
+      <%= builder.label :pruchase_price, "Price:" %> <br/>
+      <%= builder.text_field :pruchase_price %>
+<% end %>
+
+</div>    
 
 <div class="field">
 <br>  
