--- a/app/views/valuations/_valuation_line_fields.html.erb
+++ b/app/views/valuations/_valuation_line_fields.html.erb
@@ -1,5 +1,5 @@
       <tr>
-            <td><%= f.text_field :part_name, data: {autocomplete_source: Part.order(:name).map(&:name)} %></td>
+            <td><%= f.text_field :part_name, class: "pole", data: {autocomplete_source: queryparts_path} %></td>
             <td><%= f.text_field :quantity %></td>
 	        <td><%= f.text_field :purchase_price %></td>
 	        <td><%= f.hidden_field :_destroy %>	<%= link_to "Usuń", '#', class: "remove_fields" %></td>
