working autocomplete on parts new

--- a/app/views/valuations/_form.html.erb
+++ b/app/views/valuations/_form.html.erb
@@ -20,8 +20,8 @@
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>Nazwa części</th>
-      <th>Ilość</th>
+      <th>Nazwa części </th>
+      <th>Ilość </th>
       <th>Cena zakupu</th>
       <th></th>
     </tr>
@@ -36,7 +36,7 @@
      
   </tbody>
 </table>
-<%= link_to_add_fields "Dodaj produkt", f, :valuation_lines %>
+<%= link_to_add_fields "Add new part", f, :valuation_lines %>
 
 
 <div class="field">
