--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -22,7 +22,9 @@
   <div class="field">
     <%= f.label :description %><br>
     <%= f.text_area :description %>
+  <%= f.hidden_field :client_id, :value => params[:client_id] %>
   </div>
+  
   <div class="actions">
     <%= f.submit %>
   </div>
