--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-      <span class="sr-only">Toggle navigation</span>
+      <span class="sr-only">Nawigacja</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -16,12 +16,12 @@
     <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Klienci", clients_path %></li>
         <li><%= link_to "Transakcje", deals_path %></li>
-        <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "About", about_path %></li>
+        <li><%= link_to "Wyceny", valuations_path %></li>
+        <li><%= link_to "Start", root_path %></li>
         <% if user_signed_in? %>
-          <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+          <li><%= link_to "Wyloguj", destroy_user_session_path, method: :delete %></li>
         <% else %>
-          <li><%= link_to "Sign in", new_user_session_path %></li>
+          <li><%= link_to "Zaloguj", new_user_session_path %></li>
         <% end %>
     </ul>
   </div><!-- /.navbar-collapse -->
