--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,10 +2,11 @@
 <html>
 <head>
   <title>Dealflow</title>
+  <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
-  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
